--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -286,7 +286,8 @@
 .team-overlay {
   position: absolute;
   padding: 30px;
-  max-height: 100px !important;
+  min-height: 100% !important;
+  width: 100% !important;
   top: 0;
   left: 0;
   display: flex;
